...
      <View className="flex-1 flex-row items-center justify-between gap-1.5">
        <View className="flex-1 flex-row items-center gap-1.5">
          <View className="size-7 items-center justify-center rounded-full bg-primary/20">
            <Icon as={PlayIcon} size={14} className="text-primary/80" />
          </View>
          <CardTitle numberOfLines={1} className="text-sm leading-tight">
            001
          </CardTitle>
        </View>
        <Icon as={CircleCheckIcon} size={20} className="text-primary" />
      </View>
    </Card>
  );
...
