...
        <View className="flex-1 flex-row gap-2 overflow-hidden">
          {router.canGoBack() && !isProjectsView && (
            <Button
              variant="ghost"
              size="icon"
              onPress={() => router.back()}
              testID="nav-back"
            >
              <Icon as={ChevronLeftIcon} className="size-6" />
            </Button>
          )}
          <View className="relative h-11 flex-1">
            <ScrollView
...
          {!authSheetOpen ? (
            <Button
              variant="ghost"
              size="icon"
              onPress={drawerToggleCallback}
              className="relative"
              testID="app-drawer-menu-button"
              accessible
              accessibilityLabel="app-drawer-menu-button"
            >
              <Icon as={MenuIcon} className="size-6 text-foreground" />

              {/* Network Status Indicator - Bottom Right Corner */}
...
